--- a/.github/workflows/tf-destroy.yml
+++ b/.github/workflows/tf-destroy.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   terraform:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./deploy/kubernetes/terraform
@@ -21,6 +21,6 @@ jobs:
 
     - name: Terraform Destroy
       run: |
-        terraform destroy
+        terraform destroy 
       env:
         TF_VAR_service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
