--- a/.github/workflows/tf-destroy.yml
+++ b/.github/workflows/tf-destroy.yml
@@ -19,6 +19,10 @@ jobs:
       with:
         terraform_version: "1.1.7"
 
+    - name: Terraform Init
+      run: |
+        terraform init 
+
     - name: Terraform Destroy
       run: |
         terraform destroy 
