test 'ls' on runner

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Terraform Init
         run: |
           ls
+          ls ..
+          echo "--------"
+          ls ../..
           terraform init
       
       - name: Terraform Format
