--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Export key for backend
         run: |
-          export GOOGLE_APPLICATION_CREDENTIALS=/home/psarenac/actions-runner/gcp_key.json
+          ls /home/psarenac/actions-runner/
 
 
       - name: Setup Terraform
