--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,6 +17,10 @@ jobs:
         run: |
           export GOOGLE_APPLICATION_CREDENTIALS=/home/psarenac/actions-runner/gcp_key.json
 
+      - name: Install Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
