--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Terraform Init
         run: |
-          terraform init
+          terraform init -reconfigure
       
       - name: Terraform Format
         run: |
