--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Terraform Plan
         run: |
-          terraform plan -out=tfplan -lock=false
+          terraform plan -out=tfplan
         # env:
         #   TF_VAR_service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
