--- a/.github/workflows/tf-destroy.yml
+++ b/.github/workflows/tf-destroy.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   terraform:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     defaults:
       run:
         working-directory: ./deploy/kubernetes/terraform
@@ -25,6 +25,5 @@ jobs:
 
     - name: Terraform Destroy
       run: |
-        terraform destroy 
-      env:
-        TF_VAR_service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+        terraform destroy -auto-approve
+
