--- a/.github/workflows/tf-destroy.yml
+++ b/.github/workflows/tf-destroy.yml
@@ -14,6 +14,11 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v4
 
+    - name: Install Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: "20"
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
