--- a/deploy/kubernetes/manifests/07-catalogue-db-dep.yaml
+++ b/deploy/kubernetes/manifests/07-catalogue-db-dep.yaml
@@ -21,9 +21,15 @@ spec:
         image: weaveworksdemos/catalogue-db:0.3.0
         env:
           - name: MYSQL_ROOT_PASSWORD
-            value: fake_password
+            valueFrom:
+              secretKeyRef:
+                name: db-credentials-secret
+                key: db-password
           - name: MYSQL_DATABASE
-            value: socksdb
+            valueFrom:
+              secretKeyRef:
+              name: db-credentials-secret
+              key: db-name
         ports:
         - name: mysql
           containerPort: 3306
