--- a/.github/workflows/tf-destroy.yml
+++ b/.github/workflows/tf-destroy.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Terraform Init
       run: |
-        terraform init 
+        terraform init --reconfigure
 
     - name: Terraform Destroy
       run: |
