add namespace to ingress

--- a/deploy/kubernetes/manifests/basic-ingress.yaml
+++ b/deploy/kubernetes/manifests/basic-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: basic-ingress
+  namespace: sock-shop
 spec:
   rules:
   - host: pavle9.com
