--- a/deploy/kubernetes/manifests/basic-ingress.yaml
+++ b/deploy/kubernetes/manifests/basic-ingress.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -15,3 +16,8 @@ spec:
             name: front-end
             port:
               number: 80
+  defaultBackend:
+    service:
+      name: front-end
+      port:
+        number: 80
