--- a/deploy/kubernetes/manifests-logging/fluentd-sa.yaml
+++ b/deploy/kubernetes/manifests-logging/fluentd-sa.yaml
@@ -1,6 +1,6 @@
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: fluentd
-  namespace: kube-system
+# ---
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: fluentd
+#   namespace: kube-system
