--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -95,6 +95,11 @@ jobs:
  
       - name: Install kubectl
         run: gcloud components install kubectl --quiet
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: '3.13.0'
  
       - name: Authenticate with GKE Cluster
         run: gcloud container clusters get-credentials "$CLUSTER_NAME" --zone="$CLUSTER_ZONE"
@@ -113,6 +118,40 @@ jobs:
             sleep 5s
           done
 
-          kubectl apply -f deploy/kubernetes/manifests-monitoring
-          kubectl apply -f deploy/kubernetes/manifests-logging
+          # kubectl apply -f deploy/kubernetes/manifests-monitoring
+          # kubectl apply -f deploy/kubernetes/manifests-logging
+
+          # Create namespaces
+          kubectl create namespace loki || true
+          kubectl create namespace tempo || true
+          kubectl create namespace prometheus || true
+          kubectl create namespace otel || true
+
+          # Add helm repos
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo add grafana https://grafana.github.io/helm-charts
+          helm repo add open-telemetry https://open-telemetry.github.io/opentelemetry-helm-charts
+          helm repo update
+
+
+
+          # Install prometheus
+          echo "Installing prometheus..."
+          helm upgrade --install prometheus prometheus-community/prometheus --namespace prometheus || handle_installation_error "prometheus"
+
+          # Install tempo
+          echo "Installing tempo..."
+          helm -n tempo upgrade --install tempo grafana/tempo-distributed -f tempo_values.yaml || handle_installation_error "tempo"
+
+          # Install loki
+          echo "Installing loki..."
+          helm upgrade --install --namespace loki logging grafana/loki -f loki_values.yaml --set loki.auth_enabled=false || handle_installation_error "loki"
+
+          # Install Grafana
+          echo "Installing Grafana..."
+          helm upgrade --install --namespace=loki loki-grafana grafana/grafana --set service.type=LoadBalancer || handle_installation_error "grafana"
+
+          # Install otel
+          echo "Installing otel..."
+          helm upgrade --install otel-collector open-telemetry/opentelemetry-collector --namespace otel -f otel_values.yaml || handle_installation_error "otel"
         timeout-minutes: 10
