--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -123,14 +123,14 @@ jobs:
 
           # Create namespaces
           kubectl create namespace loki || true
-          kubectl create namespace tempo || true
+         # kubectl create namespace tempo || true
           kubectl create namespace prometheus || true
-          kubectl create namespace otel || true
+        #  kubectl create namespace otel || true
 
           # Add helm repos
           helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
           helm repo add grafana https://grafana.github.io/helm-charts
-          helm repo add open-telemetry https://open-telemetry.github.io/opentelemetry-helm-charts
+         # helm repo add open-telemetry https://open-telemetry.github.io/opentelemetry-helm-charts
           helm repo update
 
 
@@ -139,11 +139,11 @@ jobs:
           echo "Installing prometheus..."
           helm upgrade --install prometheus prometheus-community/prometheus --namespace prometheus || handle_installation_error "prometheus"
 
-          # Install tempo
-          echo "Installing tempo..."
-          helm -n tempo upgrade --install tempo grafana/tempo-distributed -f tempo_values.yaml || handle_installation_error "tempo"
+          # # Install tempo
+          # echo "Installing tempo..."
+          # helm -n tempo upgrade --install tempo grafana/tempo-distributed -f tempo_values.yaml || handle_installation_error "tempo"
 
-          # Install loki
+          # # Install loki
           echo "Installing loki..."
           helm upgrade --install --namespace loki logging grafana/loki -f loki_values.yaml --set loki.auth_enabled=false || handle_installation_error "loki"
 
@@ -151,7 +151,7 @@ jobs:
           echo "Installing Grafana..."
           helm upgrade --install --namespace=loki loki-grafana grafana/grafana --set service.type=LoadBalancer || handle_installation_error "grafana"
 
-          # Install otel
-          echo "Installing otel..."
-          helm upgrade --install otel-collector open-telemetry/opentelemetry-collector --namespace otel -f otel_values.yaml || handle_installation_error "otel"
+          # # Install otel
+          # echo "Installing otel..."
+          # helm upgrade --install otel-collector open-telemetry/opentelemetry-collector --namespace otel -f otel_values.yaml || handle_installation_error "otel"
         timeout-minutes: 10
