--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -135,9 +135,9 @@ jobs:
           helm repo update
 
 
-          helm upgrade --install prometheus prometheus-community/prometheus --namespace prometheus || handle_installation_error "prometheus"
-          # helm upgrade --install --namespace loki logging grafana/loki -f loki_values.yaml --set loki.auth_enabled=false || handle_installation_error "loki"
-          helm upgrade --install --namespace=loki loki-grafana grafana/grafana --set service.type=LoadBalancer || handle_installation_error "grafana"
+          helm upgrade --install prometheus prometheus-community/prometheus --namespace prometheus
+          # helm upgrade --install --namespace loki logging grafana/loki -f loki_values.yaml --set loki.auth_enabled=false
+          helm upgrade --install --namespace=loki loki-grafana grafana/grafana --set service.type=LoadBalancer
         timeout-minutes: 10
         env:
           DOMAIN_NAME: ${{ needs.context.outputs.domain }}
